# core

./: .gitignore  Cargo.toml  README.md  test_prog.mem
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: subtask.md
.github/configs/: grcov.yml
.github/workflows/: application-support.yml  baseline-sim.yml  clippy.yml  coverage.yml  device-support.yml  docs.yml  full.yml  isa.yml  macros.yml  os.yml  pr.yml  release.yml  shims.yml  test-infrastructure.yml  traits.yml  tui.yml
application-support/: Cargo.toml  README.md
application-support/src/: event_loop.rs  io_peripherals.rs  lib.rs  shim_support.rs
application-support/src/event_loop/: mod.rs  not_wasm.rs  wasm.rs
application-support/src/init/: board.rs  mod.rs  sim.rs  sim_rpc.rs  websocket.rs
baseline-sim/: Cargo.toml  README.md  RandomInstructionGenerator.py  lc3tools_executor.sh
baseline-sim/src/: interp.rs  lib.rs  mem_mapped.rs  sim.rs
baseline-sim/src/test_infrastructure/: transport_layer_test.rs
baseline-sim/tests/: common.rs  interp.rs  lc3tools_tests.rs  mem_mapped.rs  single_instructions.rs
baseline-sim/tests/common/: mod.rs
baseline-sim/tests/device_register_tests/: mod.rs
baseline-sim/tests/device_register_tests/mem_mapped/: adc.rs  clock.rs  gpio.rs  input.rs  mod.rs  output.rs  pwm.rs  timers.rs
baseline-sim/tests/mem_mapped/: gpio.rs  mod.rs
baseline-sim/tests/test_infrastructure/: macros.rs  misc.rs  mod.rs  runner.rs
benches/: common.rs  io.rs  overhead.rs  speed.rs
device-support/: Cargo.toml  README.md
device-support/src/: lib.rs
device-support/src/memory/: mod.rs  paged.rs  simple.rs
device-support/src/rpc/: mod.rs
device-support/src/rpc/encoding/: mod.rs  postcard.rs
device-support/src/rpc/transport/: mod.rs  uart_dma.rs  uart_host.rs  uart_simple.rs
device-support/src/util/: fifo.rs  mod.rs
isa/: Cargo.toml  README.md
isa/src/: fmt.rs  isa.rs  lib.rs  macros.rs  misc.rs
isa/tests/: fmt.rs  insn_roundtrip_tests.rs  macros.rs
lc3tools_executor/: lc3tools_executor.sh
lc3tools_executor/.ipynb_checkpoints/: SrDesign_Notebook-checkpoint.ipynb
macros/: Cargo.toml  README.md
macros/src/: lib.rs
misc/: notes.rs
misc/lc3-tm4c/: Cargo.toml  openocd.gdb
misc/lc3-tm4c/.cargo/: config
misc/lc3-tm4c/bins/: bt-loop.rs  hc05-at.rs
misc/lc3-tm4c/src/: main.rs  memory.rs  peripherals.rs  transport.rs
misc/lc3-tm4c/src/util/: fifo.rs  mod.rs
misc/serial/: Cargo.toml
misc/serial/src/: main.rs
os/: Cargo.toml  README.md
os/src/: lib.rs  os.rs  traps.rs
os/tests/: common.rs  smoke.rs
os/tests/trap_tests/: mod.rs
os/tests/trap_tests/traps/: adc.rs  clock.rs  gpio.rs  mod.rs  output.rs  pwm.rs  timers.rs
peripheral-shims/: Cargo.toml  README.md
peripheral-shims/src/: clock.rs  gpio.rs  lib.rs  memory.rs  output.rs  timers.rs
shims/: Cargo.toml  README.md
shims/src/: adc.rs  input.rs  lib.rs  memory.rs  pwm.rs
shims/src/memory/: error.rs  file_backed.rs  mod.rs  simple.rs
shims/src/peripherals/: adc.rs  clock.rs  gpio.rs  input.rs  mod.rs  output.rs  pwm.rs  timers.rs
src/: Communicationchannel_Experimental.rs  control.rs  error.rs  interp.rs  isa.rs  lib.rs  main.rs  memory.rs  peripherals.rs
src/peripherals/: adc.rs  clock.rs  gpio.rs  input.rs  mod.rs  output.rs  pwm.rs  timers.rs
src/shims/: adc.rs  clock.rs  gpio.rs  input.rs  memory.rs  mod.rs  output.rs  pwm.rs  timers.rs
src/tests/: mod.rs
test-infrastructure/: Cargo.toml  README.md  build.rs  lc3tools_executor.sh
test-infrastructure/src/: lib.rs  macros.rs  misc.rs  runner.rs
test-infrastructure/src/lc3tools/: macros.rs  mod.rs  runner.rs
traits/: Cargo.toml  README.md
traits/examples/: control-demo.rs  control_example.rs
traits/src/: CommunicationChannel.rs  control.rs  control_rpc.rs  error.rs  lib.rs  memory.rs  tokio_serial_test.rs  transport_layer.rs
traits/src/control/: control.rs  ext.rs  load.rs  metadata.rs  mod.rs  ranges.rs  rpc.rs  snapshot.rs
traits/src/control/rpc/: controller.rs  device.rs  encoding.rs  fault_tolerance.rs  futures.rs  messages.rs  mod.rs  transport.rs
traits/src/peripherals/: adc.rs  clock.rs  gpio.rs  input.rs  mod.rs  output.rs  pwm.rs  stubs.rs  timers.rs
traits/src/test_infrastructure/: mod.rs
tui/: Cargo.toml  README.md
tui/src/: main.rs
tui/test_prog/: file_test.txt  lc3tools_executor.sh  main.rs  test.asm.asm
tui/testing_prog/: file_test.txt  lc3tools_executor.sh  main  main.rs
