
[package]
name = "prototype"
version = "0.1.0"
authors = ["Rahul Butani <rr.butani@gmail.com>"]
edition = "2018"
# default-run = "tui"

[dependencies]
prost = "0.5"
bytes = "0.4"
#futures="0.1"
rand = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-serial = "3.3"
tm4c123x-hal = "0.9.2"
lc3-tui ={ path = "tui" }
lc3-traits ={ path = "traits" }
#lc3-shims ={ path = "shims" }
futures-preview = "=0.3.0-alpha.17"
lc3-macros ={ path = "macros" }
lc3-isa ={ path = "isa" }
[features]

shims = []

[dev-dependencies]
tui = "0.6.2"


[[example]]
name = "tui"
path = "examples/tui/main.rs"
required-features = ["shims"]

[build-dependencies]
prost-build = { version = "0.4"  }

[workspace]

members = [
    "isa",
    "traits",
    "shims",
    "tui",
    "baseline-sim",
    "macros",
]

# TODO: publish all w/CI (check versions match?)

