
[workspace]
members = [
    "isa",
    "traits",
    "shims",
    "baseline-sim",
    "shims",
    "macros",
    "os",
    "application-support",
    "test-infrastructure",
    "device-support" # TODO: spin off
]
exclude = [ "misc/lc3-tm4c", "misc/serial" ] # TODO: remove


[package] # TODO
name = "lc3-utp"
version = "0.0.0"
autobenches = false

[dev-dependencies]
lc3-baseline-sim = { path = "baseline-sim", version = "0.1.0", default-features = false }
lc3-isa = { path = "isa", version = "0.1.0", default-features = false }
lc3-shims = { path = "shims", version = "0.1.0" }
lc3-traits = { path = "traits", version = "0.1.0", default-features = false, features = [] } # Enable std features
lc3-os = { path = "os", version = "0.1.0" }

lc3tools-sys = "=1.0.6" # We can use the next point release (TODO).

criterion = "0.3.0"
async-std = "1.4.0"
lazy_static = "1.4.0"
pretty_assertions = "0.6.1"


[[bench]]
name = "speed"
harness = false

[[bench]]
name = "overhead"
harness = false

[[bench]]
name = "io"
harness = false


[features]
default = []
nightly = [] # For benchmarking.
lto = ["lc3tools-sys/lto"] # For benchmarking.


[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
# target-cpu = "native"
# panic = "abort"
incremental = false
overflow-checks = false

# TODO: publish all w/CI (check versions match?)
