[package]
name = "lc3-application-support"
version = "0.1.0"
authors = ["UT UTP <ut.utp.group@gmail.com>"]
edition = "2018"

workspace = ".."

description = "Supporting materials for devices using the UTP LC-3 Simulator."
homepage = "https://utp.tools"
repository = "http://github.com/ut-utp/prototype"

readme = "README.md"

keywords = ["lc-3", "peripherals", "applications", "utp"]
categories = ["command-line-utilities", "simulation"]

license = "MPL-2.0"


[badges]
github-actions = { repository = "ut-utp/prototype", workflow = "application-support" }
codecov = { repository = "ut-utp/prototype", branch = "master", service = "github" }

is-it-maintained-issue-resolution = { repository = "ut-utp/prototype" }
is-it-maintained-open-issues = { repository = "ut-utp/prototype" }
maintenance = { status = "actively-developed" }


[dependencies]
lc3-shims = { path = "../shims", version = "0.1.0" }
lc3-traits = { path = "../traits", version = "0.1.0", default-features = false, features = ["json_encoding_layer"] } # Enable std features
lc3-baseline-sim = { path = "../baseline-sim", version = "0.1.0", default-features = false }
lc3-device-support = { path = "../device-support", version = "0.1.0", default-features = false, features = ["host_transport"] }

lazy_static = "1.4.0"

# wasm deps:
[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-core = "0.3"
futures-util = "0.3"
web-sys = { version = "0.3", features = ["Window"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"


[dev-dependencies]
pretty_assertions = "0.6.1"
