[package]
name = "lc3-baseline-sim"
version = "0.1.0"
authors = ["UT UTP <ut.utp.group@gmail.com>"]
edition = "2018"

workspace = ".."

description = "An instruction level simulator for the LC-3."
homepage = "https://ut-utp.github.io"
repository = "http://github.com/ut-utp/prototype"

readme = "README.md"

keywords = ["lc-3", "simulator", "utp"]
categories = ["no-std", "simulation"]

license = "MPL-2.0"


[badges]
github-actions = { repository = "ut-utp/prototype", workflow = "baseline-sim" }
codecov = { repository = "ut-utp/prototype", branch = "master", service = "github" }

is-it-maintained-issue-resolution = { repository = "ut-utp/prototype" }
is-it-maintained-open-issues = { repository = "ut-utp/prototype" }
maintenance = { status = "actively-developed" }


[dependencies]
lc3-isa = { path = "../isa", version = "0.1.0" }
lc3-macros = { path = "../macros", version = "0.1.0" }
lc3-traits = { path = "../traits", version = "0.1.0" }


[features]
default = ["no_std"]
no_std = []
