[package]
name = "lc3-isa"
version = "0.1.0"
authors = ["UT UTP <ut.utp.group@gmail.com>"]
edition = "2018"

workspace = ".."

description = "Types and friends for the LC-3 ISA."
homepage = "https://utp.tools"
repository = "http://github.com/ut-utp/prototype"

readme = "README.md"

keywords = ["lc-3", "isa", "utp"]
categories = ["no-std", "simulation"]

license = "MPL-2.0"


[badges]
github-actions = { repository = "ut-utp/prototype", workflow = "isa" }
codecov = { repository = "ut-utp/prototype", branch = "master", service = "github" }

is-it-maintained-issue-resolution = { repository = "ut-utp/prototype" }
is-it-maintained-open-issues = { repository = "ut-utp/prototype" }
maintenance = { status = "actively-developed" }


[dependencies]
lc3-macros = { path = "../macros", version = "0.1.0" }

serde = { version = "1.0", default-features = false, features = ["derive"]}
static_assertions = "1.1.0"


[dev-dependencies]
itertools = "0.9.0"
pretty_assertions = "0.6.1"
# rayon = "1.2.1"

[features]
default = ["no_std"]
no_std = []
strict = []
nightly-const = [] # Requires nightly; isn't tested by CI.
