[package]
name = "lc3-os"
version = "0.1.0"
authors = ["UT UTP <ut.utp.group@gmail.com>"]
edition = "2018"

workspace = ".."

description = "Barebones base image for the LC-3."
homepage = "https://ut-utp.github.io"
repository = "http://github.com/ut-utp/prototype"

readme = "README.md"

keywords = ["lc-3", "simulator", "utp"]
categories = ["no-std", "simulation"]

license = "MPL-2.0"


[badges]
github-actions = { repository = "ut-utp/prototype", workflow = "os" }
codecov = { repository = "ut-utp/prototype", branch = "master", service = "github" }

is-it-maintained-issue-resolution = { repository = "ut-utp/prototype" }
is-it-maintained-open-issues = { repository = "ut-utp/prototype" }
maintenance = { status = "actively-developed" }


[dependencies]
lc3-isa = { path = "../isa", version = "0.1.0", default-features = false }
lc3-macros = { path = "../macros", version = "0.1.0" }

lazy_static = "1.4.0"


[dev-dependencies]
lc3-baseline-sim = { path = "../baseline-sim", version = "0.1.0", default-features = false }

pretty_assertions = "0.6.1"

