[package]
name = "lc3-shims"
version = "0.1.0"
authors = ["UT UTP <ut.utp.group@gmail.com>"]
edition = "2018"

workspace = ".."

description = "Example implementations of the LC-3 peripherals and memory suitable for simulation."
homepage = "https://ut-utp.github.io"
repository = "http://github.com/ut-utp/prototype"

readme = "README.md"

keywords = ["lc-3", "shims", "peripherals", "utp"]
categories = ["simulation"]

license = "MPL-2.0"


[badges]
github-actions = { repository = "ut-utp/prototype", workflow = "shims" }
codecov = { repository = "ut-utp/prototype", branch = "master", service = "github" }

is-it-maintained-issue-resolution = { repository = "ut-utp/prototype" }
is-it-maintained-open-issues = { repository = "ut-utp/prototype" }
maintenance = { status = "actively-developed" }


[dependencies]
lc3-isa = { path = "../isa", version = "0.1.0", default-features = false }
lc3-macros = { path = "../macros", version = "0.1.0" }
lc3-traits = { path = "../traits", version = "0.1.0", default-features = false }

byteorder = "1.3.2"
timer = "0.2.0"
time = "0.2.14"


[dev-dependencies]
pretty_assertions = "0.6.1"
