[package]
name = "lc3-traits"
version = "0.1.0"
authors = ["UT UTP <ut.utp.group@gmail.com>"]
edition = "2018"

workspace = ".."

description = "Traits defining the LC-3's peripherals, memory, and control interface."
homepage = "https://ut-utp.github.io"
repository = "http://github.com/ut-utp/prototype"

readme = "README.md"

keywords = ["lc-3", "traits", "peripherals", "utp"]
categories = ["no-std", "simulation"]

license = "MPL-2.0"

[badges]
github-actions = { repository = "ut-utp/prototype", workflow = "traits" }
codecov = { repository = "ut-utp/prototype", branch = "master", service = "github" }

is-it-maintained-issue-resolution = { repository = "ut-utp/prototype" }
is-it-maintained-open-issues = { repository = "ut-utp/prototype" }
maintenance = { status = "actively-developed" }


[dependencies]
lc3-isa = { path = "../isa", version = "0.1.0", default-features = false }
lc3-macros = { path = "../macros", version = "0.1.0" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.41"


[dev-dependencies]
pretty_assertions = "0.6.1"


[features]
default = ["no_std"]
no_std = ["lc3-isa/no_std"]


[[example]]
name = "control-demo"
path = "examples/control-demo.rs"
default-features = false
required-features = [""]
