[package]
name = "lc3-tm4c"
version = "0.1.0"
authors = ["Rahul Butani <rr.butani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

lc3-baseline-sim = { path = "../prototype/baseline-sim", version = "0.1.0", default-features = false, features = ["no_std"] }
lc3-isa = { path = "../prototype/isa", version = "0.1.0", default-features = false, features = ["no_std"] }
lc3-traits = { path = "../prototype/traits", version = "0.1.0", default-features = false, features = ["no_std"]  }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
