[package]
name = "lc3-tm4c"
version = "0.1.0"
authors = ["UT UTP <ut.utp.group@gmail.com>"]
edition = "2018"
default-run = "lc3-tm4c"

# TODO: CI
# TODO: README
# TODO: CHANGELOG
# TODO: all the other keys
# TODO: lints and attributes for this crate
# (this is very much just a proof of concept! not a prototype!!)
# We'll do all these things when this graduates to being in its own repo

[dependencies]
bytes = { version = "0.5.3", default-features = false }
static_assertions = "1.0.0"

cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
# panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
# tm4c123x = "0.9.0"
# tm4c123x-hal = { version = "0.10.0", features = ["rt"] }
tm4c123x-hal = { git = "https://github.com/thejpster/tm4c-hal/", features = ["rt"] }

lc3-baseline-sim = { path = "../../baseline-sim", version = "0.1.0", default-features = false, features = ["no_std"] }
lc3-isa = { path = "../../isa", version = "0.1.0", default-features = false, features = ["no_std"] }
lc3-traits = { path = "../../traits", version = "0.1.0", default-features = false, features = ["no_std"]  }

[[bin]]
name = "hc05-at"
path = "bins/hc05-at.rs"

[[bin]]
name = "bt-loop"
path = "bins/bt-loop.rs"


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
